style.css
* {
  margin: 0%;
  padding: 0%;
  color: white;
  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
}

html,
body {
  width: 100%;
  height: 100%;
}

/* #cursor {
  background-color:#95c11e;
  height: 25px;
  width: 25px;
  border-radius: 50%;
  position: fixed;
  z-index: 99;
} */

#cursor-blur {
  background-color: #95c11e;
  height: 200px;
  width: 200px;
  border-radius: 50%;
  position: fixed;
  filter: blur(100px);
  z-index: 9;
}

#nav {
  display: flex;
  position: fixed;
  height: 125px;
  width: 100%;
  gap: 40px;
  align-items: center;
  justify-content: flex-start;
  z-index: 99;
}

#nav h4 {
  text-transform: uppercase;
  color: white;
}

#nav img {
  height: 100px;
  width: 100px;
  padding-left: 5%;
}

video {
  height: 100%;
  width: 100%;
  object-fit: cover;
  /* object-fit : cover ; this style is applied , so that video can be take full website  */
  position: fixed;
  z-index: -2;
}

#main {
  position: relative;
  background-color: rgba(0, 0, 0, 0.35);
}

#page1 {
  position: relative;
  height: 100vh;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
}

/* justify-content and align-items works in display flex property only */

#page1 h1 {
  font-size: 90px;
  font-weight: 800;
  position: relative;
}

#page1 h1::before {
  content: "EAT. DRINK. PLAY.";
  color: black;
  position: absolute;
  top: -6px;
  left: -6px;
  font-size: 90px;
  font-weight: 800;
  -webkit-text-stroke: 1px #95c11e;
  z-index: -2;
}

#page1 h2 {
  font-size: 20px;
  font-weight: 700;
  padding: 1% 1%;
}

#page1 p {
  font-size: 18px;
  font-weight: 500;
}

#page2 {
  height: 100vh;
  width: 100%;
  position: relative;
}

#scroller {
  display: inline-block;
  white-space: nowrap;
  overflow-x: auto;
  overflow-y: hidden;
  animation-name: scroll;
  animation-duration: 40s;
  animation-timing-function: linear;
  animation-iteration-count: infinite;
  position: relative;
  z-index: 9;
}

#scroller h4 {
  display: inline-block;
  white-space: nowrap;
}

#scroller-in h4 {
  display: inline-block;
  font-size: 100px;
  font-weight: 700;
  margin-right: 10px;
  color: transparent;
  transition: all linear 0.4s;
  -webkit-text-stroke: 2px white;
}

#scroller-in h4:hover {
  color: #95c11e;
}

@keyframes scroll {
  from {
    transform: translateX(0);
  }
  to {
    transform: translateX(-100%);
  }
}

#aboutus {
  height: 40vh;
  width: 100%;
  position: relative;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

#aboutus div {
  padding-right: 5%;
  padding-left: 5%;
  text-align: center;
}

#aboutustext h3 {
  margin-bottom: 5%;
  font-size: 40px;
  text-transform: uppercase;
}

#aboutustext p {
  font-size: 20px;
}

.aboutusimg {
  height: 80%;
  width: 20%;
  border-radius: 2%;
  object-fit: cover;
  margin: 3% 3%;
}

#cards-container {
  height: 60vh;
  justify-content: center;
  align-items: center;
  position: relative;
  display: flex;
}

.card {
  position: relative;
  display: flex;
  justify-content: center;
}

.card img{
  height: 350px;
  width: 350px;
}

